PayOSClient Deployment